# CharacterRecognition

./: .gitignore  CMakeLists.txt  README.md  characterRecognizer.cpp  characterRecognizer.hpp  extract.sh  full.mdl  img.tgz  main.cpp
inc/: characterRecognizer.hpp  logger.hpp
src/: characterRecognizer.cpp  logger.cpp  main.cpp
